# J.A.R.V.I.S

./: .env.example  CLAUDE.md  README.md  agent_friday.py  dispatch.py  launcher.py  pyproject.toml  server.py  setup_autostart.py  test_tools.py  wake.py
.claude/: settings.local.json
friday/: config.py
friday/db/: __init__.py  redis_cache.py  supabase_client.py
friday/tools/: desktop.py  system.py  web.py
friday/wake/: __init__.py  detector.py
migrations/: init.sql
